# bisheing1

./: KCFdemoDeer_opencv2411+VS12可运行.rar  毕业设计初稿 1 仿真.docx  毕业设计初稿 1最终 (查重版).docx  毕业设计初稿 1最终 - 2.docx  毕业设计初稿 1最终 --1.docx  毕业设计初稿 1最终.docx  毕业设计前4页.doc
1 tracker_kcf_ros-master/src/track_pkg/src/: runtracker.cpp  runtracker.cpp.bak
2 KCF_vs-master/: KCF.psess  KCF.sln  KCF170416.vsp  README.md
2 KCF_vs-master/KCF/: KCF.vcxproj  KCF.vcxproj.filters  ffttools.hpp  ffttools.hpp.bak  fhog.cpp  fhog.hpp  kcftracker.cpp  kcftracker.hpp  opencv300_debug.props  opencv300_release.props  opencv310_debug.props  opencv310_release.props  recttools.hpp  runtracker.cpp
2 KCF_vs-master/KCF/x64/Debug/: vc120.idb
2 KCF_vs-master/x64/Debug/: KCF.ilk
3 turtlebot_apps-indigo/turtlebot_follower/scripts/: switch.py
4 kernelized correlation filter/: HOG+SVM行人检测算法在DM6437上的实现与优化 .caa  a 基于核相关滤波的高速目标跟踪算法研究与系统实现.caa  b 基于相关滤波的目标跟踪算法研究.caa  c 基于相关滤波的视觉跟踪算法研究.caa  d 基于核相关滤波的目标跟踪算法研究.caa  g基于机器学习的目标跟踪技术研究.caa  人机交互系统中手势和姿势识别算法的研究 .caa  基于HOG特征和支持向量机的静态手势识.caa  基于HOG特征和模板匹配的行人检测与跟踪研究 .caa  基于HOG特征的人脸识别系统研究 .caa  基于HOG特征的目标识别算法研究 .caa  基于Latent SVM的人体目标检测与跟踪方法研究 .caa  基于图像的人体检测跟踪和人脸识别的研究 .caa  基于时空上下文和核相关滤波器的密集采样目标跟踪方法研究 .caa  基于机器学习的行人检测关键技术研究 .caa  基于相关滤波器的目标跟踪技术MOSSE.caa  采用核相关滤波器的自适应尺度目标跟踪_张雷.caj
4 kernelized correlation filter/2 KCFcpp-master-ubuntu/: README.md  README.md.bak
4 kernelized correlation filter/4 tracker_matlab/: readme.txt.bak
5 particle filter/e 自己动手写粒子滤波（李飞，科大先研院）/: particlefilter.cpp
5 particle filter/h particleFilterTrackTest/: UpgradeLog.htm  main.c  main.c.bak  particleFilterTrackTest.vcxproj.filters  particles.c.bak
5 particle filter/i 基本粒子滤波跟踪particleFilterTrackingTest/particleFilterTrackingTest/: UpgradeLog.htm  particleFilterTrackingTest.ncb
5 particle filter/i 基本粒子滤波跟踪particleFilterTrackingTest/particleFilterTrackingTest/Backup/: particleFilterTrackingTest.sln
5 particle filter/i 基本粒子滤波跟踪particleFilterTrackingTest/particleFilterTrackingTest/Debug/: particleFilterTrackingTest.ilk
5 particle filter/i 基本粒子滤波跟踪particleFilterTrackingTest/particleFilterTrackingTest/particleFilterTrackingTest/: particleFilterTrackingTest.vcxproj
5 particle filter/myself particle filtert/: d 粒子.doc
5 particle filter/myself particle filtert/particleFilter/particleFilter/: main.cpp  particleFilter.vcxproj  particleFilter.vcxproj.filters  pf.cpp
5 particle filter/myself particle filtert/pf/: pf.sln  readme.txt
5 particle filter/myself particle filtert/pf/pf/: defs.h  observation.cpp  observation.h  particles.cpp  pf.vcxproj.filters  utils.cpp
6 路径规划/: a 机器人路径规划算法的研究.caa  b 机器人路径规划算法研究.caa  c 自主移动机器人路径规划的RRT算法研究.caa  基于势场法和遗传算法的机器人路径规划技术研究 .caa  路径规划综述.pptx
6 路径规划/myself RRT/: environment.cpp  obstacles.cpp  obstacles.h  rrt.cpp  rrt_node.cpp
8 毕业设计资料袋/: 毕业设计初稿 1最终.docx  毕业设计前4页.doc  毕业设计封面.doc  赵尹发毕业设计（论文）选题申报（审查）表.doc
8 毕业设计资料袋/发老师/: 毕业设计初稿 1最终 (查重版).docx  毕业设计初稿 1最终.docx  毕业设计前4页.doc  赵尹发毕业设计（论文）选题申报（审查）表.doc
9 MOSSE/MosseFilters-C++/utils/: sectors.cpp
9 MOSSE/mosse-python/: common  mosse tracker  object_detection.py  tst_scene_render  video
HOGvisualize/: opencvtest.sln
HOGvisualize/Debug/: opencvtest.ilk
HOGvisualize/opencvtest/: main.cpp  opencv2.4.9.props  opencvtest.h  opencvtest.vcxproj  opencvtest.vcxproj.filters  readme.cpp
HOGvisualize/opencvtest/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencvtest.lastbuildstate  vc110.idb
HOGvisualize/opencvtest/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencvtest.lastbuildstate
kinect calibration/iai_kinect2-ros/: README.md  README.md.bak
kinect calibration/kinect_calib_with_data_2_1/v2.1/capture/: CMakeLists.txt  freenect_module.cpp  freenect_module.h  kinect_calibration.cpp  kinect_calibration.h  kinect_capture.cpp  kinect_capture_app.cpp  kinect_capture_app.h
kinect calibration/kinect_calib_with_data_2_1/v2.1/data/: 0000-d.pgm  0001-d.pgm  0002-d.pgm  0003-d.pgm  0004-d.pgm  0005-d.pgm  0006-d.pgm  0007-d.pgm  0008-d.pgm  0009-d.pgm  (+49 more)
my kcf_tracker_ros/kcf_tracker/: kcf_tracker.sln
my kcf_tracker_ros/kcf_tracker/kcf_tracker/: ffttools.h  fhog.cpp  fhog.h  kcf_tracker.vcxproj  kcf_tracker.vcxproj.filters  kcftracker.cpp  kcftracker.cpp.bak  kcftracker.h  labdata.h  recttools.h  runtracker.cpp  tracker.h
my kcf_vs/kcf_vs/: kcf_vs.sln
my kcf_vs/kcf_vs/kcf_vs/: ffttools.h  fhog.cpp  fhog.h  kcf_vs.vcxproj  kcf_vs.vcxproj.filters  kcftracker.cpp  kcftracker.h  labdata.h  recttools.h  runtracker.cpp  tracker.h
my turtlebot_follower/cfg/: Follower.cfg
my turtlebot_follower/launch/: follower.launch
my turtlebot_follower/src/: turtlrbot_follower.cpp
视频目标跟踪多种算法及源码/: readme.txt  基于计算机视觉的运动目标跟踪算法研究_尹宏鹏.caj
视频目标跟踪多种算法及源码/卡尔曼滤波/: 基于卡尔曼滤波的动目标视觉跟踪方法研究_王孝艳.caj
视频目标跟踪多种算法及源码/卡尔曼滤波/2/: nn1.m
视频目标跟踪多种算法及源码/粒子滤波/: PF.c
视频目标跟踪多种算法及源码/粒子滤波/1/: demo1.m
视频目标跟踪多种算法及源码/粒子滤波/2/: pf.m  pf_yunsu.m  readme.txt
视频目标跟踪多种算法及源码/粒子滤波/5/: Particlefilterpf2.m
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md.bak  find_checks.sh  package.xml
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/cfg/: AMCL.cfgc
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/cfg/cpp/amcl/: AMCLConfig.h
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/include/map/: map.h
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/include/pf/: pf.h  pf_vector.h
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/include/sensors/: amcl_laser.h  amcl_odom.h  amcl_sensor.h
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/src/: amcl_node.cpp
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/src/amcl/cfg/: AMCLConfig.py
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/src/map/: map_feature.cpp
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/src/pf/: amcl_low_variance_resample.patch  diff_after_applying_low_variance_resampling_patch_to_pf.c___.txt  pf.c  pf_pdf.c  pf_vector.c
视频目标跟踪多种算法及源码/粒子滤波/nested_amcl-NPF_AW_MCHMM/src/sensors/: amcl_laser.cpp  amcl_odom.cpp
(+342 files in other folders)
